samples/_failures_safe/1761257803_a68aa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57a31faa.c: In function ‘main’:
./samples/SAFE/__tmp_57a31faa.c:167:9: error: expected ‘,’ or ‘;’ at end of input
  167 |         for (size_t i = buffer.count - display_count
      |         ^~~
./samples/SAFE/__tmp_57a31faa.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57a31faa.c:167:9: error: expected declaration or statement at end of input
